--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "passport": "^0.6.0",
