--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.1",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
+    "multer": "^2.0.2",
     "passport-oauth2": "^1.8.0",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
