--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,3 +25,24 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=tu_email@gmail.com
 EMAIL_PASSWORD=tu_password_de_aplicacion
+
+# SMTP Configuration for Weekly Reports
+# Para Gmail: necesitas una contraseña de aplicación desde https://myaccount.google.com/apppasswords
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=sistemas@proyectoscsi.mx
+SMTP_PASS=tu_password_de_aplicacion
+
+# Report Recipients (separated by commas)
+REPORT_RECIPIENTS=admin1@empresa.com,admin2@empresa.com
+
+# Cron Schedule for Weekly Report
+# Format: seconds minutes hours day-of-month month day-of-week
+# Default: Monday at 9:00 AM (0 9 * * 1)
+CRON_WEEKLY_REPORT=0 9 * * 1
+
+# Timezone
+TIMEZONE=America/Mexico_City
+
+# Admin Registration Code
+ADMIN_REGISTRATION_CODE=NEXUS2025
