--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.10.1",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.8.0",
+    "pdfkit": "^0.17.2",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
