--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.6.0",
     "passport-oauth2": "^1.8.0",
     "pdfkit": "^0.17.2",
+    "resend": "^6.7.0",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
