--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
+    "connect-mongo": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
